--- a/index.html
+++ b/index.html
@@ -115,13 +115,16 @@
 
         <section class="stars-free">
             <h2 class="stars-free__heading">Get your favorites for free</h2>
-            <div class="stars">
-                <button class="stars__btn active" onclick="showContent(event, 0)">25<span
-                        class="star-icon">★</span></button>
-                <button class="stars__btn" onclick="showContent(event, 1)">50<span class="star-icon">★</span></button>
-                <button class="stars__btn" onclick="showContent(event, 2)">150<span class="star-icon">★</span></button>
-                <button class="stars__btn" onclick="showContent(event, 3)">200<span class="star-icon">★</span></button>
-                <button class="stars__btn" onclick="showContent(event, 4)">400<span class="star-icon">★</span></button>
+            <div class="stars-container">
+                <div class="stars">
+                    <button class="stars__btn active" onclick="showContent(event, 0)">25<span
+                            class="star-icon">★</span></button>
+                    <button class="stars__btn" onclick="showContent(event, 1)">50<span class="star-icon">★</span></button>
+                    <button class="stars__btn" onclick="showContent(event, 2)">150<span class="star-icon">★</span></button>
+                    <button class="stars__btn" onclick="showContent(event, 3)">200<span class="star-icon">★</span></button>
+                    <button class="stars__btn" onclick="showContent(event, 4)">400<span class="star-icon">★</span></button>
+                </div>
+                <div class="bottom-bar"></div>
             </div>
             <div class="stars-free__content active">
                 <img src="images/customize-drink.png" alt="" class="content__img">
